Fixes "twitter and general button don't align"

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -410,10 +410,6 @@ input[type="search"]::-webkit-search-decoration {
 	display: inline-block;
 }
 
-.widget.tweet, .widget.button {
-	display: inline-block;
-}
-
 // Header
 .template-header {
 	padding-top: 30px;
